--- a/starship.toml
+++ b/starship.toml
@@ -3,6 +3,8 @@ format = """
 $python\
 $username\
 [](bg:#434C5E fg:#3B4252)\
+$hostname\
+[](bg:#434C5E fg:#3B4252)\
 $directory\
 [](fg:#434C5E bg:#4C566A)\
 $git_branch\
@@ -33,7 +35,14 @@ command_timeout = 5000
 show_always = true
 style_user = "bg:#3B4252"
 style_root = "bg:#3B4252"
-format = '[$user ]($style)'
+format = '[$user ㉿]($style)'
+
+[hostname]
+ssh_only = false
+trim_at = "."
+disabled = false
+format = '[@$hostname ](bg:#3B4252)'
+
 
 [directory]
 style = "bg:#434C5E"
