--- a/starship.toml
+++ b/starship.toml
@@ -5,9 +5,9 @@ $username\
 [](bg:#434C5E fg:#3B4252)\
 $hostname\
 [](fg:#434C5E bg:#4C566A)\
+[](fg:#4C566A bg:#86BBD8)\
 $git_branch\
 $git_status\
-[](fg:#4C566A bg:#86BBD8)\
 $c\
 $elixir\
 $elm\
@@ -68,7 +68,7 @@ format = '[ $symbol ($version) ]($style)'
 
 [docker_context]
 symbol = " "
-style = "bg:#06969A"
+style = "bg:#86BBD8"
 format = '[ $symbol $context ]($style) $path'
 
 [elixir]
@@ -83,11 +83,11 @@ format = '[ $symbol ($version) ]($style)'
 
 [git_branch]
 symbol = ""
-style = "bg:#4C566A"
+style = "bg:#86BBD8"
 format = '[ $symbol $branch ]($style)'
 
 [git_status]
-style = "bg:#4C566A"
+style = "bg:#86BBD8"
 format = '[$all_status$ahead_behind ]($style)'
 
 [golang]
