--- a/config.jsonc
+++ b/config.jsonc
@@ -60,7 +60,7 @@
         },
         {
             "type": "custom",
-            "format": "|──────────────\u001b[1mUptime / Age\u001b[0m────────────────|"
+            "format": "|──────────────\u001b[1mUptime / Age\u001b[0m──────────────────|"
         },
         {
             "type": "command",
