--- a/config.jsonc
+++ b/config.jsonc
@@ -1,116 +1,130 @@
+
 {
-    "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
-    "logo": {
-      "padding": {
-        "top": 2,
-        "left": 1,
-        "right": 2
-      }
-    },
-    "display": {
-      "separator": "  "
-    },
-    "modules": [
-      // Title
+  "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
+  "logo": {
+  "padding": {
+  "top": 1
+  }
+  },
+  "display": {
+  "separator": " 󰑃  "
+  },
+  "modules": [
+      "break",
       {
-        "type": "title",
-        "format": "{#1}╭───────────── {#}{user-name-colored}"
-      },
-      // System Information
-      {
-        "type": "custom",
-        "format": "{#1}│ {#}System Information"
+      "type": "os",
+      "key": " DISTRO",
+      "keyColor": "yellow"
       },
       {
-        "type": "os",
-        "key": "{#separator}│  {#keys}󰍹 OS"
+      "type": "kernel",
+      "key": "│ ├",
+      "keyColor": "yellow"
       },
       {
-        "type": "kernel",
-        "key": "{#separator}│  {#keys}󰒋 Kernel"
+      "type": "packages",
+      "key": "│ ├󰏖",
+      "keyColor": "yellow"
       },
       {
-        "type": "uptime",
-        "key": "{#separator}│  {#keys}󰅐 Uptime"
+      "type": "command",
+      "key": "│ ├",
+      "keyColor": "yellow",
+      "text": "birth_install=$(stat -c %W /); current=$(date +%s); time_progression=$((current - birth_install)); days_difference=$((time_progression / 86400)); echo $days_difference days"
       },
       {
-        "type": "packages",
-        "key": "{#separator}│  {#keys}󰏖 Packages",
-        "format": "{all}"
+      "type": "shell",
+      "key": "│ └",
+      "keyColor": "yellow"
+      },
+  
+      {
+      "type": "wm",
+      "key": " DE/WM",
+      "keyColor": "blue"
       },
       {
-        "type": "custom",
-        "format": "{#1}│"
-      },
-      // Desktop Environment
-      {
-        "type": "custom",
-        "format": "{#1}│ {#}Desktop Environment"
+      "type": "wmtheme",
+      "key": "│ ├󰉼",
+      "keyColor": "blue"
       },
       {
-        "type": "de",
-        "key": "{#separator}│  {#keys}󰧨 DE"
+      "type": "icons",
+      "key": "│ ├󰀻",
+      "keyColor": "blue"
       },
       {
-        "type": "wm",
-        "key": "{#separator}│  {#keys}󱂬 WM"
+          "type": "cursor",
+          "key": "│ ├",
+          "keyColor": "blue",
       },
       {
-        "type": "wmtheme",
-        "key": "{#separator}│  {#keys}󰉼 Theme"
+          "type": "terminalfont",
+          "key": "│ ├",
+          "keyColor": "blue",
       },
       {
-        "type": "display",
-        "key": "{#separator}│  {#keys}󰹑 Resolution"
+      "type": "terminal",
+      "key": "│ └",
+      "keyColor": "blue"
       },
       {
-        "type": "shell",
-        "key": "{#separator}│  {#keys}󰞷 Shell"
+      "type": "host",
+      "key": "󰌢 SYSTEM",
+      "keyColor": "green"
       },
       {
-        "type": "terminalfont",
-        "key": "{#separator}│  {#keys}󰛖 Font"
+      "type": "cpu",
+      "key": "│ ├󰻠",
+      "keyColor": "green"
       },
       {
-        "type": "custom",
-        "format": "{#1}│"
-      },
-      // Hardware Information
-      {
-        "type": "custom",
-        "format": "{#1}│ {#}Hardware Information"
+      "type": "gpu",
+      "key": "│ ├󰻑",
+      "format": "{2}",
+      "keyColor": "green"
       },
       {
-        "type": "cpu",
-        "key": "{#separator}│  {#keys}󰻠 CPU"
+      "type": "display",
+      "key": "│ ├󰍹",
+      "keyColor": "green",
+      "compactType": "original-with-refresh-rate"
       },
       {
-        "type": "gpu",
-        "key": "{#separator}│  {#keys}󰢮 GPU"
+      "type": "memory",
+      "key": "│ ├󰾆",
+      "keyColor": "green"
       },
       {
-        "type": "memory",
-        "key": "{#separator}│  {#keys}󰍛 Memory"
+      "type": "swap",
+      "key": "│ ├󰓡",
+      "keyColor": "green"
       },
       {
-        "type": "disk",
-        "key": "{#separator}│  {#keys}󰋊 Disk (/)",
-        "folders": "/"
+      "type": "uptime",
+      "key": "│ ├󰅐",
+      "keyColor": "green"
       },
       {
-        "type": "custom",
-        "format": "{#1}│"
+      "type": "sound",
+      "key": " AUDIO",
+      "format": "{2}",
+      "keyColor": "magenta"
       },
-      // Colors
       {
-        "type": "colors",
-        "key": "{#separator}│",
-        "symbol": "circle"
+      "type": "player",
+      "key": "│ ├󰥠",
+      "keyColor": "magenta"
       },
-      // Footer
       {
-        "type": "custom",
-        "format": "{#1}╰───────────────────────────────╯"
-      }
-    ]
+      "type": "media",
+      "key": "│ └󰝚",
+      "keyColor": "magenta"
+      },
+      {
+      "type": "custom",
+      "format": "\u001b[90m  \u001b[31m  \u001b[32m  \u001b[33m  \u001b[34m  \u001b[35m  \u001b[36m  \u001b[37m  \u001b[38m  \u001b[39m  \u001b[39m    \u001b[38m  \u001b[37m  \u001b[36m  \u001b[35m  \u001b[34m  \u001b[33m  \u001b[32m  \u001b[31m  \u001b[90m "
+      },
+      "break",
+      ]
   }
