--- a/config.jsonc
+++ b/config.jsonc
@@ -1,128 +1,172 @@
-{
-    "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
-    "logo": {
-      "padding": {
-        "top": 1
-      }
-    },
-    "display": {
-      "separator": " 󰑃 "
-    },
-    "modules": [
-      "break",
-      {
-        "type": "os",
-        "key": " DISTRO",
-        "keyColor": "yellow"
-      },
-      {
-        "type": "kernel",
-        "key": "│ ├",
-        "keyColor": "yellow"
-      },
-      {
-        "type": "packages",
-        "key": "│ ├󰏖",
-        "keyColor": "yellow"
-      },
-      {
-        "type": "command",
-        "key": "│ ├",
-        "keyColor": "yellow",
-        "text": "birth_install=$(stat -c %W /); current=$(date +%s); time_progression=$((current - birth_install)); days_difference=$((time_progression / 86400)); echo $days_difference days"
-      },
-      {
-        "type": "shell",
-        "key": "│ └",
-        "keyColor": "yellow"
-      },
-      {
-        "type": "wm",
-        "key": " DE/WM",
-        "keyColor": "blue"
-      },
-      {
-        "type": "wmtheme",
-        "key": "│ ├󰉼",
-        "keyColor": "blue"
-      },
-      {
-        "type": "icons",
-        "key": "│ ├󰀻",
-        "keyColor": "blue"
-      },
-      {
-        "type": "cursor",
-        "key": "│ ├",
-        "keyColor": "blue"
-      },
-      {
-        "type": "terminalfont",
-        "key": "│ ├",
-        "keyColor": "blue"
-      },
-      {
-        "type": "terminal",
-        "key": "│ └",
-        "keyColor": "blue"
-      },
-      {
-        "type": "host",
-        "key": "󰌢 SYSTEM",
-        "keyColor": "green"
-      },
-      {
-        "type": "cpu",
-        "key": "│ ├󰻠",
-        "keyColor": "green"
-      },
-      {
-        "type": "gpu",
-        "key": "│ ├󰻑",
-        "format": "{2}",
-        "keyColor": "green"
-      },
-      {
-        "type": "display",
-        "key": "│ ├󰍹",
-        "keyColor": "green",
-        "compactType": "original-with-refresh-rate"
-      },
-      {
-        "type": "memory",
-        "key": "│ ├󰾆",
-        "keyColor": "green"
-      },
-      {
-        "type": "swap",
-        "key": "│ ├󰓡",
-        "keyColor": "green"
-      },
-      {
-        "type": "uptime",
-        "key": "│ ├󰅐",
-        "keyColor": "green"
-      },
-      {
-        "type": "sound",
-        "key": " AUDIO",
-        "format": "{2}",
-        "keyColor": "magenta"
-      },
-      {
-        "type": "player",
-        "key": "│ ├󰥠",
-        "keyColor": "magenta"
-      },
-      {
-        "type": "media",
-        "key": "│ └󰝚",
-        "keyColor": "magenta"
-      },
-      {
-        "type": "custom",
-        "format": "\u001b[90m  \u001b[31m  \u001b[32m  \u001b[33m  \u001b[34m  \u001b[35m  \u001b[36m  \u001b[37m  \u001b[38m  \u001b[39m  \u001b[39m    \u001b[38m  \u001b[37m  \u001b[36m  \u001b[35m  \u001b[34m  \u001b[33m  \u001b[32m  \u001b[31m  \u001b[90m "
-      },
-      "break"
-    ]
-  }
+## FIRST LINE/ROW: Info & Status
+# First param ─┌
+[username]
+format = " [╭─$user]($style)@"
+style_user = "bold blue"
+style_root = "bold blue"
+show_always = true
+
+# Second param
+[hostname]
+format = "[$hostname]($style) in "
+style = "bold blue"
+trim_at = "-"
+ssh_only = false
+disabled = false
+
+# Third param
+[directory]
+style = "green"
+truncation_length = 0
+truncate_to_repo = true
+truncation_symbol = "repo: "
+
+# Before all the version info (python, nodejs, php, etc.)
+[git_status]
+style = "white"
+ahead = "⇡${count}"
+diverged = "⇕⇡${ahead_count}⇣${behind_count}"
+behind = "⇣${count}"
+deleted = "x"
+
+# Last param in the first line/row
+[cmd_duration]
+min_time = 1
+format = "took [$duration]($style)"
+disabled = true
+
+
+## SECOND LINE/ROW: Prompt
+# Somethere at the beginning
+[battery]
+full_symbol = " "
+charging_symbol = " "
+discharging_symbol = " "
+disabled = true
+
+[[battery.display]]  # "bold red" style when capacity is between 0% and 10%
+threshold = 15
+style = "bold red"
+disabled = true
+
+[[battery.display]]  # "bold yellow" style when capacity is between 10% and 30%
+threshold = 50
+style = "bold yellow"
+disabled = true
+
+[[battery.display]]  # "bold green" style when capacity is between 10% and 30%
+threshold = 80
+style = "bold green"
+disabled = true
+
+# Prompt: optional param 1
+[time]
+format = " 🕙 $time($style)\n"
+time_format = "%T"
+style = "bright-white"
+disabled = true
+
+# Prompt: param 2 └─
+[character]
+success_symbol = " [╰─㉿](bold blue)"
+error_symbol = " [×](bold blue)"
+
+# SYMBOLS
+[status]
+symbol = "🔴"
+format = '[\[$symbol$status_common_meaning$status_signal_name$status_maybe_int\]]($style)'
+map_symbol = true
+disabled = false
+
+[aws]
+symbol = "  "
+
+[conda]
+symbol = " "
+
+[dart]
+symbol = " "
+
+#[directory]
+#read_only = " "
+
+[docker_context]
+symbol = " "
+format = "via [$symbol$context]($style) "
+style = "blue bold"
+only_with_files = true
+detect_files = ["docker-compose.yml", "docker-compose.yaml", "Dockerfile"]
+detect_folders = []
+disabled = false
+
+[elixir]
+symbol = " "
+
+[elm]
+symbol = " "
+
+[git_branch]
+symbol = " "
+
+[golang]
+symbol = " "
+
+[hg_branch]
+symbol = " "
+
+[java]
+symbol = " "
+
+[julia]
+symbol = " "
+
+[haskell]
+symbol = "λ "
+
+[memory_usage]
+symbol = " "
+
+[nim]
+symbol = " "
+
+[nix_shell]
+symbol = " "
+
+[package]
+symbol = " "
+
+[perl]
+symbol = " "
+
+[php]
+symbol = " "
+
+[python]
+symbol = " "
+#pyenv_version_name = true
+format = 'via [${symbol}python (${version} )(\($virtualenv\) )]($style)'
+style = "bold yellow"
+pyenv_prefix = "venv "
+python_binary = ["./venv/bin/python", "python", "python3", "python2"]
+detect_extensions = ["py"]
+version_format = "v${raw}"
+
+[ruby]
+symbol = " "
+
+[rust]
+symbol = " "
+
+[scala]
+symbol = " "
+
+[shlvl]
+symbol = " "
+
+[swift]
+symbol = "ﯣ "
+
+[nodejs]
+format = "via [ Node.js $version](bold green) "
+detect_files = ["package.json", ".node-version"]
+detect_folders = ["node_modules"]
